force-app/main/default/objects/LLC_BI__Fee_Loan_Aggregate__c/fields/LLC_BI__Additional_Charges__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Additional_Charges__c</fullName>
    <description>The system automatically populates this optional currency field to indicate the aggregate total of all additional fees not associated with the 12 Other fees listed as line items. By default, this field is blank.</description>
    <inlineHelpText>This system-populated field indicates the aggregate total of all fees not associated with the 12 listed line items.</inlineHelpText>
    <label>Additional Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>