force-app/main/default/objects/LLC_BI__Fee_Loan_Aggregate__c/fields/LLC_BI__Adjustments_Other_Credits__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Adjustments_Other_Credits__c</fullName>
    <description>The system populates this optional currency field to capture the sum of adjustments and other credits for a Real Estate transaction. By default, this field is blank.</description>
    <inlineHelpText>This system-populated field displays the sum of Adjustments and Other Credits.</inlineHelpText>
    <label>Adjustments and Other Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>