force-app/main/default/objects/LLC_BI__Fee_Loan_Aggregate__c/fields/LLC_BI__Aggregate_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Aggregate_Adjustment__c</fullName>
    <description>The system automatically populates this currency field to indicate the aggregate adjustment or the change in the total escrow payment due at closing. The aggregate adjustment value may be zero or negative. By default, this field is blank.</description>
    <inlineHelpText>This system-populated field indicates the aggregate adjustment or the change in the total escrow payment due at closing.</inlineHelpText>
    <label>Aggregate Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>