force-app/main/default/objects/LLC_BI__Fee_Loan_Aggregate__c/fields/LLC_BI__Closing_Costs_Paid_Before_Closing__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Closing_Costs_Paid_Before_Closing__c</fullName>
    <description>The system automatically populates when fees are added to the loan. This field represents the total closing costs associated to the loan paid before closing.</description>
    <inlineHelpText>The system enters total closing costs associated to the loan paid before closing.</inlineHelpText>
    <label>Closing Costs Paid Before Closing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>