force-app/main/default/objects/LLC_BI__Fee_Loan_Aggregate__c/fields/LLC_BI__Cost_To_Cure__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Cost_To_Cure__c</fullName>
    <description>The system automatically populates this currency field to indicate the refund of fees paid in excess of the actual amount. By default, this field is blank.</description>
    <inlineHelpText>This field indicates the refund of fees paid in excess of the actual amount.</inlineHelpText>
    <label>Cost to Cure</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>