force-app/main/default/objects/LLC_BI__Fee_Loan_Aggregate__c/fields/LLC_BI__Cushion_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Cushion_Amount__c</fullName>
    <description>The system automatically populates this currency field to indicate the total cushion amount included in the initial escrow payment the borrower pays at closing. The system uses the Monthly Escrow Payment value and the Cushion Months system property to calculate the Cushion Amount. By default, this field is blank.</description>
    <inlineHelpText>This system-populated field indicates the total cushion amount the borrower pays at closing.</inlineHelpText>
    <label>Cushion Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>