force-app/main/default/objects/LLC_BI__Fee_Loan_Aggregate__c/fields/LLC_BI__Earnest_Money_Deposit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Earnest_Money_Deposit__c</fullName>
    <description>The system populates this optional currency field to indicate the total deposit amount for a Real Estate transaction. By default, this field is blank.</description>
    <inlineHelpText>This system-populated field displays the earnest money or total deposit amount made for the transaction.</inlineHelpText>
    <label>Earnest Money/Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>