force-app/main/default/objects/LLC_BI__Fee_Loan_Aggregate__c/fields/LLC_BI__Estimated_Taxes_Insurance_Assessments__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Estimated_Taxes_Insurance_Assessments__c</fullName>
    <description>The system automatically populates this optional currency field with the total monthly payment amount of all fees where the Monthly Payment Amount field is populated to indicate the estimated monthly taxes, insurance, and assessments. By default, this field is blank.</description>
    <inlineHelpText>This system-populated field indicates the estimated monthly taxes, insurances, and assessments.</inlineHelpText>
    <label>Estimated Taxes Insurance &amp; Assessments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>