force-app/main/default/objects/LLC_BI__Fee_Loan_Aggregate__c/fields/LLC_BI__Funds_For_Borrower__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Funds_For_Borrower__c</fullName>
    <description>The system populates this optional currency field to capture the Funds for Borrower amount for a real estate transaction. By default, this field is blank.</description>
    <inlineHelpText>This system-populated field displays the Funds for Borrower amount.</inlineHelpText>
    <label>Funds For Borrower</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>