force-app/main/default/objects/LLC_BI__Fee_Loan_Aggregate__c/fields/LLC_BI__Loan_Proceeds__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan_Proceeds__c</fullName>
    <description>The system automatically populates this currency field to capture the loan amount disbursed to the borrower for the collateral purchase or loan purpose, not including fees that have been financed.</description>
    <inlineHelpText>This field indicates the loan amount disbursed to the borrower for the collateral purchase or loan purpose, not including fees that have been financed.</inlineHelpText>
    <label>Loan Proceeds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>