force-app/main/default/objects/LLC_BI__Fee_Loan_Aggregate__c/fields/LLC_BI__Net_Trade__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Net_Trade__c</fullName>
    <description>The system automatically populates this currency field to indicate the total amount applied towards a transaction. The system calculates this total by subtracting the trade-in balance from the trade-in allowance. By default, this field is blank.</description>
    <inlineHelpText>This field displays the total amount applied towards the transaction.</inlineHelpText>
    <label>Net Trade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>