force-app/main/default/objects/LLC_BI__Fee_Loan_Aggregate__c/fields/LLC_BI__Total_10_Percent_Cumulative_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_10_Percent_Cumulative_Tolerance__c</fullName>
    <description>The system automatically populates this optional field to indicate the cumulative sum of all fees in the 10% tolerance category. By default, this field is blank.</description>
    <inlineHelpText>This field displays the total of all fees in the 10% tolerance category.</inlineHelpText>
    <label>Total 10% Cumulative Tolerance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>