force-app/main/default/objects/LLC_BI__Fee_Loan_Aggregate__c/fields/LLC_BI__Total_Closing_Costs__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Closing_Costs__c</fullName>
    <description>The system automatically populates this optional formula field to indicate the total closing costs. By default, this field is zero.</description>
    <formula>LLC_BI__Total_Loan_and_Other_Costs__c - LLC_BI__Total_Lender_Credits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field displays the total closing costs for a loan.</inlineHelpText>
    <label>Total Closing Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>