force-app/main/default/objects/LLC_BI__Fee_Loan_Aggregate__c/fields/LLC_BI__Total_Down_Payment__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Down_Payment__c</fullName>
    <description>The user populates this currency field to indicate the total amount of down payments associated to a loan. By default, this field is blank.</description>
    <inlineHelpText>Populate this field with the total amount of down payments associated to a loan.</inlineHelpText>
    <label>Total Down Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>