force-app/main/default/objects/LLC_BI__Fee_Loan_Aggregate__c/fields/LLC_BI__Total_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Fee_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is automatically populated when fees are added to the loan.  This field represents the total Amount of all fees associated to this object.</description>
    <inlineHelpText>Total Amount of all fees associated to this object.</inlineHelpText>
    <label>Total Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>