force-app/main/default/objects/LLC_BI__Fee_Loan_Aggregate__c/fields/LLC_BI__Total_Fee_Amount_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Fee_Amount_Outstanding__c</fullName>
    <description>This field is automatically populated when fees are added to the loan. This field represents the total fee amount minus the total fee amount paid.</description>
    <formula>LLC_BI__Total_Fee_Amount__c - LLC_BI__Total_Fee_Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total fee amount minus the total fee amount paid.</inlineHelpText>
    <label>Total Fee Amount Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>