force-app/main/default/objects/LLC_BI__Fee_Loan_Aggregate__c/fields/LLC_BI__Total_Initial_Escrow_Payment_at_Closing__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Initial_Escrow_Payment_at_Closing__c</fullName>
    <description>The system automatically populates this optional field to indicate the aggregate total of fees associated with the initial escrow payment at closing. By default, this field is blank.</description>
    <inlineHelpText>This system-populated field displays the aggregate total of fees for the initial escrow payment at closing.</inlineHelpText>
    <label>Total Initial Escrow Payment at Closing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>