force-app/main/default/objects/LLC_BI__Fee_Loan_Aggregate__c/fields/LLC_BI__Total_Loan_Costs__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Loan_Costs__c</fullName>
    <description>The system automatically populates this optional formula field to indicate the aggregate total of fees associated with loan costs. By default, this field is zero.</description>
    <formula>LLC_BI__Total_Origination_Charges__c  +  LLC_BI__Total_Services_You_Cannot_Shop_For__c  +  LLC_BI__Total_Services_You_Can_Shop_For__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This system-populated field displays the aggregate total of fees for loan costs.</inlineHelpText>
    <label>Total Loan Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>