force-app/main/default/objects/LLC_BI__Fee_Loan_Aggregate__c/fields/LLC_BI__Total_Origination_Charges__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Origination_Charges__c</fullName>
    <description>The system automatically populates this optional field to indicate the aggregate total of fees associated with origination charges. By default, this field is blank.</description>
    <inlineHelpText>This system-populated field displays the aggregate total of fees for origination charges.</inlineHelpText>
    <label>Total Origination Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>