force-app/main/default/objects/LLC_BI__Fee_Loan_Aggregate__c/fields/LLC_BI__Total_Other__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Other__c</fullName>
    <description>The system automatically populates this optional field to indicate the aggregate total of other fees associated with the loan. By default, this field is blank.</description>
    <inlineHelpText>This system-populated field displays the aggregate total of other fees.</inlineHelpText>
    <label>Total Other</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>